syntax = "proto3";
package org.horiga.study.armeria.grpc.v1;

import "v1/message.proto";

service HelloService {
    rpc SayHello(HelloRequest) returns (HelloResponse);
}

message HelloRequest {
    string message = 1;
}

message HelloResponse {
    string message = 1;
}